feat: sync & store activities in db
